widget/cocoa/nsChildView.h
@@ -21,6 +21,7 @@
 #include "nsWeakPtr.h"
 #include "TextInputHandler.h"
 #include "nsCocoaUtils.h"
+#include "gfxQuartzSurface.h"
 
 #include "nsString.h"
 #include "nsIDragService.h"
@@ -280,6 +281,8 @@ typedef NSInteger NSEventGestureAxis;
 
 - (void)drawRect:(NSRect)aRect inTitlebarContext:(CGContextRef)aContext;
 
+- (void)drawTitlebar:(NSRect)aRect inTitlebarContext:(CGContextRef)aContext;
+
 - (void)sendMouseEnterOrExitEvent:(NSEvent*)aEvent
                             enter:(BOOL)aEnter
                              type:(nsMouseEvent::exitType)aType;
@@ -505,6 +508,8 @@ public:
 
   NS_IMETHOD        ReparentNativeWidget(nsIWidget* aNewParent);
 
+  virtual void      WillPaint() MOZ_OVERRIDE;
+
   mozilla::widget::TextInputHandler* GetTextInputHandler()
   {
     return mTextInputHandler;
@@ -523,6 +528,8 @@ public:
   NSRect            DevPixelsToCocoaPoints(const nsIntRect& aRect) {
     return nsCocoaUtils::DevPixelsToCocoaPoints(aRect, BackingScaleFactor());
   }
+
+  void CompositeTitlebar(const gfxSize& aSize, CGContextRef aContext);
 
 protected:
 
@@ -559,6 +566,9 @@ protected:
 
   nsRefPtr<gfxASurface> mTempThebesSurface;
   nsRefPtr<mozilla::gl::TextureImage> mResizerImage;
+
+  nsRefPtr<gfxQuartzSurface> mTitlebarSurf;
+  gfxSize mTitlebarSize;
 
   // Cached value of [mView backingScaleFactor], to avoid sending two obj-c
   // messages (respondsToSelector, backingScaleFactor) every time we need to
